# internal/handlers/quote.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"bilatung/internal/apis/operations/quote"
+	"bilatung/internal/models"
 	"context"
 )
 
@@ -11,4 +12,12 @@ func (h *handler) CreateQuote(ctx context.Context, params *quote.PostQuoteParams
 		return err
 	}
 	return nil
+}
+
+func (h *handler) GetRandomQuote(ctx context.Context) (*models.QuotesResponse, error) {
+	res, err := h.useCase.GetRandomQuote(ctx)
+	if err != nil {
+		return nil, err
+	}
+	return res, nil
 }
